# CodeReviewAI

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
app/: api.py  config.py  main.py  models.py  services.py  utils.py
tests/: test_api.py  test_services.py
